# chromefleet

./: .env.template  .envrc  Dockerfile  README.md  chromefleet.py  deploy-dokku.md  location_service.py  main.py  observability.py  pyproject.toml
.github/workflows/: container.yml  deploy-lambda.yml  package.yml  publish.yml  static-analysis.yml  tests.yml
docs/: ops-hardening.md
src/: chromefleet.py  location_service.py  observability.py  residential_proxy.py
src/webui/: index.html
tests/: test_e2e.py
webui/: index.html
