[project]
name = "hello-python"
version = "0.1.0"
description = "Hello Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyright>=1.1.407",
    "ruff>=0.14.10",
    "ty>=0.0.4",
]

[tool.ruff]
src = ["*.py"]
exclude = [
  "**/__pycache__",
  "**/.pytest_cache",
  "**/.venv",
  "**/venv",
  "**/htmlcov",
  "**/*env/*",
  "**/.git",
  "**/*.yaml",
  "**/*.yml",
]
line-length = 120
preview = true

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "error"
reportUnknownMemberType = "error"
reportUnknownArgumentType = "error"
reportUnknownVariableType = "error"
reportUnknownLambdaType = "error"
reportImplicitStringConcatenation = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecessaryContains = "error"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true
